refactor: Restructure project and add comprehensive README
- Update module name in go.mod
- Modify Makefile to use new cmd directory structure
- Add detailed README.md with project overview, features, and TLS security explanation
- Update .env.example with additional TLS-related configuration parameters

--- a/cmd/server/.env.example
+++ b/cmd/server/.env.example
@@ -1,1 +1,8 @@
 DSN="host=xxxx user=xxxx password=xxxx dbname=xxxx port=xxxx sslmode=xxxx"
+
+TLS_CERT_FILE="xxxx"
+TLS_KEY_FILE="xxxx"
+TLS_CA_FILE="xxxx"
+TLS_SERVER_NAME="xxxx"
+
+PORT="xxxx"
