feat: Add environment-based configuration for server and client
- Update Makefile to use environment-specific paths
- Add `.env.example` files for server and client configurations
- Implement flexible environment file loading with command-line flag support
- Update README.md to document new environment configuration approach
- Modify client and server main files to use environment-based configuration

--- a/cmd/server/.env.example
+++ b/cmd/server/.env.example
@@ -1,8 +1,11 @@
-DSN="host=xxxx user=xxxx password=xxxx dbname=xxxx port=xxxx sslmode=xxxx"
+# Database Configuration
+DSN="host=localhost user=postgres password=postgres dbname=todos port=5432 sslmode=disable"
 
-TLS_CERT_FILE="xxxx"
-TLS_KEY_FILE="xxxx"
-TLS_CA_FILE="xxxx"
-TLS_SERVER_NAME="xxxx"
+# Server TLS Configuration
+TLS_CERT_FILE=/path/to/server.crt
+TLS_KEY_FILE=/path/to/server.key
+TLS_CA_FILE=/path/to/ca.crt
+TLS_SERVER_NAME=localhost
 
-PORT="xxxx"
+# gRPC Server Configuration
+PORT=8080
